# simple-fast-pic

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  TODO.md  fly.toml  pyproject.toml
deploy/: Dockerfile  Makefile  bot.service  fly.toml  site.service  supervisord.conf
src/: config.py  functions.py  main.py  tg.py
static/css/: theme.css
templates/: about.html  base_layout.html  index.html  screenshot.html  screenshot_not_found.html  tg_start.html  upload.html
