[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sergey Tanygin <s.tanygin@roseltorg.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
webdavclient3 = "^3.14.6"
pydantic = "^1.10.5"
python-dotenv = "^1.0.0"
filetype = "^1.2.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pytelegrambotapi = "^4.10.0"
simplekv = "^0.14.1"

[tool.poetry.scripts]
bot = "src.tg:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
